# ClothTOP

./: CMakeLists.txt  ClothTOP_cloak.toe  ClothTOP_inflatable.toe  LICENSE  README.md
shaders/: cloth_deform_pbr_frag.glsl  cloth_deform_pbr_geo.glsl  cloth_deform_pbr_vert.glsl  cloth_deform_pbr_vert_uv.glsl
src/: ClothTOP.cpp  ClothTOP.h  FlexSystem.cpp  FlexSystem.h  kernel.cu
